exports[`BoardItemsList rendering should render properly with multiple boards 1`] = `
<div
  className="row">
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="board-item">
      boardTitle1
    </div>
  </div>
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="board-item">
      boardTitle2
    </div>
  </div>
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="board-item">
      boardTitle3
    </div>
  </div>
</div>
`;

exports[`BoardItemsList rendering should render properly with no boards 1`] = `
<div
  className="row" />
`;

exports[`BoardItemsList rendering should render properly with one board 1`] = `
<div
  className="row">
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="board-item">
      boardTitle1
    </div>
  </div>
</div>
`;
